force-app/main/default/objects/Account_Stakeholder__c.object
<CustomObject>
    <description>Relates Contact records as Stakeholders to an Account. This duplicates the Account Contact Role, but benefits from being a custom object (record types, tabs etc)</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Reference to the organisation the contact is a stakeholder for.</description>
        <inlineHelpText>Please provide the Account reference the Contact is a stakeholder for.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Stakeholders</relationshipLabel>
        <relationshipName>Stakeholders</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_Formula__c</fullName>
        <description>Formula field with hyperlink to parent contact record.</description>
        <formula>HYPERLINK(Contact__c, Contact__r.Full_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Reference to a Contact record as stakeholder</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Stakeholders</relationshipLabel>
        <relationshipName>AccountStakeholders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>The role the stakeholder holds in the opportunity</description>
        <inlineHelpText>Please provide the role of the Contact assumes in the opportunity.</inlineHelpText>
        <label>Role</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Sponsor</fullName>
                </value>
                <value>
                    <fullName>Research Lead</fullName>
                </value>
                <value>
                    <fullName>Education Lead</fullName>
                </value>
                <value>
                    <fullName>Commercialisation Lead</fullName>
                </value>
                <value>
                    <fullName>Philanthropy Lead</fullName>
                </value>
                <value>
                    <fullName>Precinct Lead</fullName>
                </value>
                <value>
                    <fullName>Infrastructure Lead</fullName>
                </value>
                <value>
                    <fullName>Technology Lead</fullName>
                </value>
                <value>
                    <fullName>Other Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Stakeholder</label>
    <nameField>
        <displayFormat>ASN-{000000}</displayFormat>
        <label>Account Stakeholder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stakeholders</pluralLabel>
    <recordTypes>
        <fullName>Enterprise</fullName>
        <active>true</active>
        <description>Stakehoder roles for Enterprise opportunities</description>
        <label>Enterprise</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>